# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "adminmanager_fuzzer:AdminManagerFuzzTest",
    "adminpoliciesstoragerdb_fuzzer:AdminPoliciesStorageRdbFuzzTest",
    "adminserviceinterface_fuzzer:AdminServiceInterfaceFuzzTest",
    "allowedusbdevicesplugin_fuzzer:AllowedUsbDevicesPluginFuzzTest",
    "edmplugin_fuzzer:EdmPluginFuzzTest",
    "enterprisedevicemgrability_fuzzer:EnterpriseDeviceMgrAbilityFuzzTest",
    "enterprisedevicemgrstubmock_fuzzer:EnterpriseDeviceMgrStubMockFuzzTest",
    "firewallruleplugin_fuzzer:FireWallRulePluginFuzzTest",
    "iptablesruleplugin_fuzzer:IptablesRulePluginFuzzTest",
    "manageautostartappsplugin_fuzzer:ManageAutoStartAppsPluginFuzzTest",
    "usbreadonlyplugin_fuzzer:UsbReadOnlyPluginFuzzTest",
  ]
}
