# Copyright (c) 2022-2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

group("fuzztest") {
  testonly = true
  deps = []

  deps += [
    # deps file
    "adminmanager_fuzzer:AdminManagerFuzzTest",
    "adminpoliciesstoragerdb_fuzzer:AdminPoliciesStorageRdbFuzzTest",
    "adminserviceinterface_fuzzer:AdminServiceInterfaceFuzzTest",
    "allowedusbdevicesplugin_fuzzer:AllowedUsbDevicesPluginFuzzTest",
    "disallowaddosaccountbyuserplugin_fuzzer:DisallowAddOsAccountByUserPluginFuzzTest",
    "disallowedrunningbundlesplugin_fuzzer:DisallowedRunningBundlesPluginFuzzTest",
    "edmplugin_fuzzer:EdmPluginFuzzTest",
    "enterprisedevicemgrability_fuzzer:EnterpriseDeviceMgrAbilityFuzzTest",
    "enterprisedevicemgrstubmock_fuzzer:EnterpriseDeviceMgrStubMockFuzzTest",
    "firewallruleplugin_fuzzer:FireWallRulePluginFuzzTest",
    "getbluetoothinfoplugin_fuzzer:GetBluetoothInfoPluginFuzzTest",
    "getdeviceinfoplugin_fuzzer:GetDeviceInfoPluginFuzzTest",
    "installplugin_fuzzer:InstallPluginFuzzTest",
    "iptablesruleplugin_fuzzer:IptablesRulePluginFuzzTest",
    "manageautostartappsplugin_fuzzer:ManageAutoStartAppsPluginFuzzTest",
    "powerpolicyplugin_fuzzer:PowerPolicyPluginFuzzTest",
    "setbrowserpoliciesplugin_fuzzer:SetBrowserPoliciesPluginFuzzTest",
    "usbreadonlyplugin_fuzzer:UsbReadOnlyPluginFuzzTest",
    "usercertplugin_fuzzer:UserCertPluginFuzzTest",
  ]
}
