# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/customization/enterprise_device_management/edm.gni")
import("//build/ohos.gni")

config("tools_edm_config") {
  include_dirs = [
    "include",
    "$SUBSYSTEM_DIR/common/native/include",
    "$SUBSYSTEM_DIR/interfaces/inner_api/include",
    "//utils/system/safwk/native/include",
  ]
}

ohos_source_set("tools_edm_source_set") {
  sources = [
    "src/edm_command.cpp",
    "src/main.cpp",
    "src/shell_command.cpp",
  ]

  public_configs = [
    ":tools_edm_config",
    "//base/customization/enterprise_device_management/common/config:coverage_flags",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hiviewdfx_hilog_native:libhilog",
    "ipc:ipc_core",
  ]

  deps = [ "$EDM_INNERKITS_PATH:edmservice_kits" ]
}

ohos_executable("edm") {
  deps = [ ":tools_edm_source_set" ]

  install_enable = true

  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

group("tools_edm") {
  deps = [ ":edm" ]
}
