# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

config("tools_edm_config") {
  include_dirs = [ "include" ]
}

ohos_source_set("tools_edm_source_set") {
  sources = [
    "src/edm_command.cpp",
    "src/main.cpp",
    "src/shell_command.cpp",
  ]

  public_configs = [
    ":tools_edm_config",
    "../../common/config:coverage_flags",
  ]

  cflags = []
  if (target_cpu == "arm") {
    cflags += [ "-DBINDER_IPC_32BIT" ]
  }

  external_deps = [
    "ability_base:want",
    "bundle_framework:appexecfwk_base",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
  ]

  deps = [ "../../interfaces/inner_api:edmservice_kits" ]

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

ohos_executable("edm") {
  deps = [ ":tools_edm_source_set" ]
  external_deps = [ "hilog:libhilog" ]

  install_enable = true

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}

group("tools_edm") {
  deps = [ ":edm" ]
}
