# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../common/config/common.gni")

ohos_shared_library("napi_edm_common") {
  include_dirs = [
    "include",
    "./include",
    "../../../common/native/include/",
  ]

  sources = [
    "./src/napi_edm_adapter.cpp",
    "./src/napi_edm_common.cpp",
    "./src/napi_edm_error.cpp",
  ]

  configs = [ "../../../common/config:coverage_flags" ]

  deps = [
    "../../inner_api:edmservice_kits",
    "../../../common/external:edm_external_adapters"
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_core",
    "napi:ace_napi",
  ]

  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  branch_protector_ret = "pac_ret"
  innerapi_tags = [ "platformsdk" ]
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}
