# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")
import("../../../common/config/common.gni")

ohos_shared_library("systemmanager") {
  include_dirs = [
    "include",
    "../common/include",
  ]

  sources = [
    "./src/system_manager_addon.cpp"
  ]

  configs = [ "../../../common/config:coverage_flags" ]

  deps = [
    "../../inner_api:edmservice_kits",
    "../../inner_api/plugin_kits:plugin_kits",
    "../common:napi_edm_common",
  ]

  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "ipc:ipc_single",
    "napi:ace_napi",
  ]

  defines = []
  if (enterprise_device_management_feature_pc_only) {
    defines += [ "FEATURE_PC_ONLY" ]
  }

  if (log_service_plugin_edm_enable) {
    defines += [ "LOG_SERVICE_PLUGIN_EDM_ENABLE" ]
  }

  relative_install_dir = "module/enterprise"
  sanitize = {
    boundary_sanitize = true
    cfi = true
    cfi_cross_dso = true
    debug = false
    integer_overflow = true
    ubsan = true
  }
  branch_protector_ret = "pac_ret"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}
