# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/customization/enterprise_device_management/edm.gni")
import("//build/ohos.gni")

ohos_shared_library("wifimanager") {
  include_dirs = [
    "//third_party/node/src",
    "$SUBSYSTEM_DIR/common/native/include",
    "$SUBSYSTEM_DIR/interfaces/kits/common/include",
    "$SUBSYSTEM_DIR/interfaces/kits/wifi_manager/include",
    "$SUBSYSTEM_DIR/interfaces/inner_api/include",
    "$WIFI_ROOT_DIR/frameworks/native/interfaces",
    "$WIFI_ROOT_DIR/services/wifi_standard/wifi_framework/wifi_toolkit/net_helper",
  ]

  sources = [
    "$SUBSYSTEM_DIR/interfaces/kits/common/src/napi_edm_common.cpp",
    "$SUBSYSTEM_DIR/interfaces/kits/common/src/napi_edm_error.cpp",
    "src/wifi_manager_addon.cpp",
  ]

  configs = [ "$SUBSYSTEM_DIR/common/config:coverage_flags" ]

  deps = [
    "$EDM_INNERKITS_PATH:edmservice_kits",
    "$SUBSYSTEM_DIR/common/native:edm_commom",
    "//third_party/bounds_checking_function:libsec_shared",
  ]

  external_deps = [
    "ability_base:want",
    "hiviewdfx_hilog_native:libhilog",
    "napi:ace_napi",
    "wifi:wifi_sdk",
  ]

  relative_install_dir = "module/enterprise"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}
