# Copyright (c) 2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/ohos.gni")

ohos_shared_library("wifimanager") {
  include_dirs = [
    "../common/include",
    "include",
  ]

  sources = [
    "../common/src/napi_edm_common.cpp",
    "../common/src/napi_edm_error.cpp",
    "./src/wifi_manager_addon.cpp",
  ]

  configs = [ "../../../common/config:coverage_flags" ]

  deps = [
    "../../../common/native:edm_commom",
    "../../inner_api:edmservice_kits",
    "//third_party/bounds_checking_function:libsec_shared",
  ]

  external_deps = [
    "ability_base:want",
    "hilog:libhilog",
    "napi:ace_napi",
    "wifi:wifi_sdk",
  ]

  relative_install_dir = "module/enterprise"
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}
