# Copyright (c) 2024 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#####################hydra-fuzz###################
import("//build/config/features.gni")
import("//build/ohos.gni")
import("//build/test.gni")
import("../../../common/config/common.gni")
module_output_path = "enterprise_device_management/enterprise_device_management"

##############################fuzztest##########################################
ohos_fuzztest("DisallowedNearlinkProtocolsPluginFuzzTest") {
  module_out_path = module_output_path

  fuzz_config_file = "."

  cflags = [
    "-g",
    "-O0",
    "-Wno-unused-variable",
    "-fno-omit-frame-pointer",
  ]
  sources = [
    "../common/src/common_fuzzer.cpp",
    "disallowed_nearlink_protocols_plugin_fuzzer.cpp",
  ]

  include_dirs = [
    "../common/include",
    "../../../interfaces/inner_api/common/include",
  ]

  configs = [ "../../../common/config:coverage_flags" ]

  deps = [
    "../../../interfaces/inner_api/plugin_kits:plugin_kits",
    "../enterprisedevicemgrstubmock_fuzzer:edmservice_fuzz_static",
  ]
  
  subsystem_name = "customization"
  part_name = "enterprise_device_management"
}